Ankit Portfolio Added Animations and togglers. Add Navigation to Top Link. Added Social Media Links

--- a/index.html
+++ b/index.html
@@ -8,8 +8,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/main.css" />
-
-    <!-- <link rel="stylesheet" href="assets/styles/main.css"> -->
+    <script src="assets/scripts/app.js" defer></script>
 </head>
 
 <body class=".night">
@@ -28,8 +27,7 @@
                 Hello! <span class="wave wave-hand"></span>
             </div>
             <div class="intro__heading">
-                I'm <strong>Ankit Sharma</strong>, a design-minded front-end software
-                engineer focused on building beautiful interfaces & experiences.
+                I'm <strong>Ankit Sharma</strong>, a design-oriented Web Developer focused on building beautiful interfaces & experiences.
             </div>
             <div class="intro__contact">
                 Get in touch <span class="pointer"></span>
@@ -44,19 +42,21 @@
                 <p>
                     I'm currently a Sr. Web Developer at
                     <a class="anchor" href="https://www.digitizebrand.com/" target="_blank">Digitize Brand</a>
-                    building things for the web with some awesome people. I recently won
-                    <a class="anchor" href="https://hacktoberfest.digitalocean.com/" target="_blank">Hacktoberfest 2019</a>.
+                    building things for the web with some awesome people.
                 </p>
 
                 <p>
-                    I design and code beautiful tiny things, and I love what I do. My daily goal is to turn the client's vision of his website into reality. My goal is to always build
+                    I design and code beautiful tiny things, and I am in love with what I do. My daily goal is to turn the client's vision of his dream website into reality. My goal is to always build
                     applications that are scalable and efficient while
                     providing engaging, ROI focused user experiences.
                 </p>
 
+                <p>I recently won
+                    <a class="anchor" href="https://hacktoberfest.digitalocean.com/" target="_blank">Hacktoberfest 2019</a>.</p>
+
                 <p>
-                    <strong>When I'm not hitting my keyboard,</strong>, I'm
-                    probably listening to songs, humming and singing along or reading articles on medium.
+                    <strong>When I'm not hitting the keyboard,</strong>, I'm
+                    probably listening to songs, humming and singing along or reading articles on <a   class="anchor" href="https://medium.com/">Medium</a>.
                 </p>
             </div>
         </div>
@@ -326,12 +326,16 @@
             </div>
 
             <div class="footer__links">
-                <a href="" class="anchor social-link">Email</a>
-                <a href="" class="anchor social-link">Twitter</a>
-                <a href="" class="anchor social-link">Github</a>
-                <a href="" class="anchor social-link">LinkedIn</a>
+                <a href="mailto:ankitsharma101299@gmail.com" class="anchor social-link">Email</a>
+                <a href="https://twitter.com/AnkitWebDev" class="anchor social-link">Twitter</a>
+                <a href="https://github.com/AnkitSharmaOnGithub/" class="anchor social-link">Github</a>
+                <a href="https://www.linkedin.com/in/ankit-sharma-8abb6710b" class="anchor social-link">LinkedIn</a>
             </div>
         </footer>
+
+        <a class="anchor-link">
+            <img src="assets/images/goup.png" alt="">
+        </a>
     </div>
 </body>
 
