Updated index.html with projects and experience changes.

--- a/index.html
+++ b/index.html
@@ -11,17 +11,8 @@
     <script src="assets/scripts/app.js" defer></script>
 </head>
 
-<body class=".night">
+<body>
     <div class="main-container">
-        <div class="toggler">
-            <div class="sun"></div>
-            <div class="toggler__wrapper">
-                <input type="checkbox" name="switch" id="switch" />
-                <label for="switch" id="toggle"></label>
-            </div>
-            <div class="moon"></div>
-        </div>
-
         <header class="intro">
             <div class="intro__greeting">
                 Hello! <span class="wave wave-hand"></span>
@@ -68,10 +59,11 @@
                 <div class="skills__desc__category">
                     <div class="skills__desc__category__heading">LANGUAGES</div>
                     <ul>
+                        <li>HTML</li>
+                        <li>CSS</li>
+                        <li>Scss/Sass</li>
                         <li>JavaScript (ES6)</li>
                         <li>TypeScript</li>
-                        <li>HTML</li>
-                        <li>CSS/Sass</li>
                         <li>MySQL</li>
                         <li>Python</li>
                     </ul>
@@ -81,12 +73,9 @@
                     <div class="skills__desc__category__heading">FRAMEWORKS</div>
                     <ul>
                         <li>BootStrap</li>
-                        <li>React</li>
-                        <li>Jekyll</li>
-                        <li>Node</li>
-                        <li>D3</li>
+                        <li>Angular</li>
                         <li>Wordpress</li>
-                        <li>Timber</li>
+                        <li>Jquery</li>
                     </ul>
                 </div>
 
@@ -95,24 +84,9 @@
                     <ul>
                         <li class="skillz__category__item">Bash</li>
                         <li class="skillz__category__item">Git &amp; Github</li>
-                        <li class="skillz__category__item">Gulp &amp; Grunt</li>
+                        <li class="skillz__category__item">Gulp</li>
                         <li class="skillz__category__item">Chrome DevTools</li>
                         <li class="skillz__category__item">Postman</li>
-                        <li class="skillz__category__item">MongoDB</li>
-                    </ul>
-                </div>
-
-                <div class="skills__desc__category">
-                    <div class="skills__desc__category__heading">DESIGN</div>
-                    <ul>
-                        <ul>
-                            <li class="skillz__category__item">Sketch</li>
-                            <li class="skillz__category__item">InDesign</li>
-                            <li class="skillz__category__item">InVision</li>
-                            <li class="skillz__category__item">Prototyping</li>
-                            <li class="skillz__category__item">Wireframing</li>
-                            <li class="skillz__category__item">User Testing</li>
-                        </ul>
                     </ul>
                 </div>
             </div>
@@ -138,9 +112,9 @@
                             <div class="job__desc--company">
                                 <a href="">Aayansh Germinate</a>
                             </div>
-                            <div class="job__duration">August 2018 - May 2019</div>
+                            <div class="job__duration">Aug 2018 - May 2019</div>
                         </div>
-                        <div class="job__position">PHP Internship</div>
+                        <div class="job__position">PHP Intern</div>
                     </div>
 
                     <div class="job">
