Added preconnect link tag

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ankit Sharma | Web Developer</title>
 
+    <link rel="preconnect" href="https://fonts.gstatic.com/">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/main.css" />
     <script src="assets/scripts/app.js" defer></script>
