--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Ankit Sharma | Web Developer</title>
 
     <link rel="preconnect" href="https://fonts.gstatic.com/">
+    <link rel="preload" href="https://fonts.googleapis.com">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="css/main.css" />
     <script src="assets/scripts/app.js" defer></script>
