--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link rel="preconnect" href="https://fonts.gstatic.com/">
     <link rel="preload" href="https://fonts.googleapis.com">
-    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,900&display=swap" rel="stylesheet"  media="print" onload="this.media='all'"/>
     <link rel="stylesheet" href="css/main.css" />
     <script src="assets/scripts/app.js" defer></script>
 </head>
