Added noreferrer and noopener attribute to links.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <div class="desc background__desc">
                 <p>
                     I'm currently a Sr. Web Developer at
-                    <a class="anchor" href="https://www.digitizebrand.com/" target="_blank">Digitize Brand</a>
+                    <a class="anchor" href="https://www.digitizebrand.com/" target="_blank" rel="noopener">Digitize Brand</a>
                     building things for the web with some awesome people.
                 </p>
 
@@ -46,7 +46,7 @@
                 </p>
 
                 <p>I recently won
-                    <a class="anchor" href="https://hacktoberfest.digitalocean.com/" target="_blank">Hacktoberfest 2019</a>.</p>
+                    <a class="anchor" href="https://hacktoberfest.digitalocean.com/" rel="noreferrer" target="_blank">Hacktoberfest 2019</a>.</p>
 
                 <p>
                     <strong>When I'm not hitting the keyboard,</strong>, I'm
