Added meta description and keywords tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ankit Sharma | Web Developer</title>
+    <meta name="description" content="Ankit Sharma. Web Developer."> 
+    <meta name="keywords" content="design, development, web, ankitsharma, ankit, sharma,css, javascript, india">
 
     <link rel="preconnect" href="https://fonts.gstatic.com/">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet"  media="print" onload="this.media='all'"/>
