Minified and corrected script

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
         </a>
     </div>
 
-    <script type="javascript" defer>
+    <script defer>
         document.addEventListener("DOMContentLoaded",function(){var e=document.querySelector("a.anchor-link"),o=document.querySelector(".intro");e.addEventListener("click",function(e){e.preventDefault(),window.scroll({behavior:"smooth",left:0,top:o.offsetTop})}),document.addEventListener("scroll",function(){window.scrollY>o.offsetHeight?e.classList.add("show"):e.classList.remove("show")})});
     </script>
 </body>
