Added Changes to Service Worker

--- a/index.html
+++ b/index.html
@@ -319,6 +319,22 @@
 
     <script defer>
         document.addEventListener("DOMContentLoaded",function(){var e=document.querySelector("a.anchor-link"),o=document.querySelector(".intro");e.addEventListener("click",function(e){e.preventDefault(),window.scroll({behavior:"smooth",left:0,top:o.offsetTop})}),document.addEventListener("scroll",function(){window.scrollY>o.offsetHeight?e.classList.add("show"):e.classList.remove("show")})});
+
+        if('serviceWorker' in navigator){
+            // console.log('exists');
+            navigator.serviceWorker.register('/sw.js')
+            .then(reg => {
+                if(reg.installing){
+                    console.log('Installing');
+                }
+                else if(reg.waiting){
+                    console.log('Installed');
+                }
+                if(reg.active){
+                    console.log('Activated');
+                }
+            })
+        }
     </script>
 </body>
 
