Removed Link from Index Page

--- a/index.html
+++ b/index.html
@@ -40,7 +40,9 @@
             <div class="desc background__desc">
                 <p>
                     I'm currently a Sr. Web Developer at
-                    <a class="anchor" href="https://www.digitizebrand.com/" target="_blank" rel="noopener">Digitize Brand</a>
+                    <!-- <a class="anchor" href="https://www.digitizebrand.com/" target="_blank" rel="noopener"> -->
+                    Digitize Brand
+                    <!-- </a> -->
                     building things for the web with some awesome people.
                 </p>
 
