Added diffrent versions of Logo. And updated manifest.json and service worker file with the same.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <meta name="keywords" content="design, development, web, ankitsharma, ankit, sharma,css, javascript, india">
     <meta name="theme-color" content="#056ddc"/>
 
+    <link rel="shortcut icon" href="assets/images/favicon.png" />
+
+
     <link rel="preconnect" href="https://fonts.gstatic.com/">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700&display=swap" rel="stylesheet"  media="print" onload="this.media='all'"/>
 
