--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="theme-color" content="#056ddc"/>
 
     <link rel="shortcut icon" href="assets/images/favicon.png" />
+    <link rel="apple-touch-icon" href="assets/images/logo/Logo 192x192.png">
 
 
     <link rel="preconnect" href="https://fonts.gstatic.com/">
