--- a/index.html
+++ b/index.html
@@ -75,10 +75,14 @@
                     <ul>
                         <li>HTML</li>
                         <li>CSS</li>
-                        <li>Scss/Sass</li>
+                        <li>Scss</li>
+                        <li>Sass</li>
                         <li>JavaScript (ES6)</li>
-                        <li>TypeScript</li>
+                        <li>PHP</li>
                         <li>MySQL</li>
+                        <li>SQL</li>
+                        <li>Ajax</li>
+                        <li>TypeScript</li>
                         <li>Python</li>
                     </ul>
                 </div>
