--- a/index.html
+++ b/index.html
@@ -88,12 +88,14 @@
                 </div>
 
                 <div class="skills__desc__category">
-                    <div class="skills__desc__category__heading">FRAMEWORKS</div>
+                    <div class="skills__desc__category__heading">Libraries & Frameworks</div>
                     <ul>
                         <li>BootStrap</li>
                         <li>Angular</li>
+                        <li>CodeIgniter</li>
                         <li>Wordpress</li>
                         <li>Jquery</li>
+                        <li>Axios</li>
                     </ul>
                 </div>
 
