--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
                         <li class="skillz__category__item">Bash</li>
                         <li class="skillz__category__item">Git &amp; Github</li>
                         <li class="skillz__category__item">Gulp</li>
+                        <li class="skillz__category__item">Grunt</li>
                         <li class="skillz__category__item">Chrome DevTools</li>
+                        <li class="skillz__category__item">Bash</li>
                         <li class="skillz__category__item">Postman</li>
                     </ul>
                 </div>
