--- a/index.html
+++ b/index.html
@@ -111,6 +111,15 @@
                         <li class="skillz__category__item">Postman</li>
                     </ul>
                 </div>
+
+                <div class="skills__desc__category">
+                    <div class="skills__desc__category__heading">Design</div>
+                    <ul>
+                        <li class="skillz__category__item">Photoshop</li>
+                        <li class="skillz__category__item">Canva</li>
+                        <li class="skillz__category__item">GIMP</li>
+                    </ul>
+                </div>
             </div>
         </div>
 
