--- a/index.html
+++ b/index.html
@@ -170,6 +170,21 @@
 
                 <div class="project">
                     <div class="project__title">
+                       <a href="https://ankitsharmaongithub.github.io/covid19/">Covid-19 Tracker App</a>
+                    </div>
+                    <div class="project__desc"> An app showing data about Covid-19</div>
+                    <div class="project__tech">
+                        <ul>
+                            <li>html5</li>
+                            <li>css3</li>
+                            <li>javascript</li>
+                            <li>fetch api</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="project">
+                    <div class="project__title">
                        <a href="https://ankitsharmaongithub.github.io/recipe_generator/">Recipe Generator</a>
                     </div>
                     <div class="project__desc"> Random Recipe Generator using the Meal Db API </div>
