--- a/index.html
+++ b/index.html
@@ -215,6 +215,19 @@
 
                 <div class="project">
                     <div class="project__title">
+                       <a href="https://ankitsharmaongithub.github.io/Insurance-Landing-Page/">Bello Insurance Landing Page</a>
+                    </div>
+                    <div class="project__desc">Landing page for Bello Insurance</div>
+                    <div class="project__tech">
+                        <ul>
+                            <li>html5</li>
+                            <li>css3</li>
+                        </ul>
+                    </div>
+                </div>
+
+                <div class="project">
+                    <div class="project__title">
                        <a href="https://ankitsharmaongithub.github.io/Boat-Trail-Landing-Page/">Boat Trail</a></div>
                     <div class="project__desc"> Boat Trail Landing Page</div>
                     <div class="project__tech">
