Updated article sites

--- a/index.html
+++ b/index.html
@@ -74,7 +74,10 @@
                 <p>
                     <strong>When I'm not hitting the keyboard,</strong>, I'm
                     probably listening to songs, humming and singing along or reading articles on <a class="anchor"
-                        href="https://medium.com/">Medium</a>.
+                        href="https://medium.com/">Medium</a> , <a class="anchor" href="https://dev.to/">Dev.to</a> , <a class="anchor"
+                        href="https://css-tricks.com/">CSS Tricks</a>, <a class="anchor" href="https://freecodecamp.org/news/">FreeCodeCamp</a>.
+
+                        
                 </p>
             </div>
         </div>
@@ -144,7 +147,7 @@
                     <div class="job">
                         <div class="job__desc">
                             <div class="job__desc--company">
-                                <a href="javascript:;">Digitize Brand</a>
+                                <a href="https://digitizebrand.com/">Digitize Brand</a>
                             </div>
                             <div class="job__duration">May 2019 - Present</div>
                         </div>
@@ -154,21 +157,21 @@
                     <div class="job">
                         <div class="job__desc">
                             <div class="job__desc--company">
-                                <a href="">Aayansh Germinate</a>
+                                <a href="https://www.aayanshgerminate.com/">Aayansh Germinate</a>
                             </div>
                             <div class="job__duration">Aug 2018 - May 2019</div>
                         </div>
-                        <div class="job__position">PHP Intern</div>
+                        <div class="job__position">PHP Developer</div>
                     </div>
 
                     <div class="job">
                         <div class="job__desc">
                             <div class="job__desc--company">
-                                <a href="javascript:;">Sparks Foundation</a>
+                                <a href="https://www.thesparksfoundationsingapore.org/">Sparks Foundation Singapore</a>
                             </div>
                             <div class="job__duration">Oct 2017 - Apr 2018</div>
                         </div>
-                        <div class="job__position">Work From Home</div>
+                        <div class="job__position">Volunteer</div>
                     </div>
                 </div>
             </div>
@@ -371,7 +374,7 @@
 
         <footer class="footer">
             <div class="footer__developer">
-                <h3>Design & Developed By Ankit Sharma</h3>
+                <h3>Designed & Developed By Ankit Sharma</h3>
             </div>
 
             <div class="footer__links">
