Minified intro image

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
 
             <div class="inro__img">
-                <img src="assets/images/3426526.jpg" alt="">
+                <img src="assets/images/intro.jpg" alt="">
             </div>
         </header>
 
