Style the Footer and add buttons in the social media link

--- a/index.html
+++ b/index.html
@@ -844,12 +844,20 @@
             </div>
 
             <div class="footer__links">
-                <button href="mailto:ankitsharma101299@gmail.com" type="button" class="btn btn-danger">Email</button>
-                <button href="https://twitter.com/AnkitWebDev" type="button" class="btn btn-info">Twitter</button>
-                <button href="https://github.com/AnkitSharmaOnGithub/" type="button"
+                <a href="mailto:ankitsharma101299@gmail.com">
+                    <button  type="button" class="btn btn-danger">Email</button>
+                </a>
+                <a href="https://twitter.com/AnkitWebDev">
+                    <button  type="button" class="btn btn-info">Twitter</button>
+                </a>
+                <a href="https://github.com/AnkitSharmaOnGithub/">
+                    <button type="button"
                     class="btn btn-dark">Github</button>
-                <button href="https://www.linkedin.com/in/ankit-sharma-8abb6710b" type="button"
+                </a>
+                <a href="https://www.linkedin.com/in/ankit-sharma-8abb6710b">
+                    <button type="button"
                     class="btn btn-primary">LinkedIn</button>
+                </a>   
             </div>
 
         </footer>
